--- a/main.html
+++ b/main.html
@@ -4,10 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Git</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p><b>My Intro to Git a Colab</b></p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
