--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p><b>"My Intro to Git and Colab</b></p>
+	<p><b>My Intro to Git and Colab</b></p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
